--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,15 +4,19 @@ body{
 
 section{
     text-align: center;
+    text-decoration: underline;
+    
 }
 
 
 button{
+    
     background-color: aqua;
     width: 150px;
     height: 50px;
     margin: 100px;
     text-align: center;
+    
     
     
 }
@@ -31,4 +35,8 @@ button{
 .scores{
     display: inline-block;
     padding: 25px;
+}
+
+*{
+    text-align: center;
 }
