--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ ul {
   
   li a {
     display: block;
-    color: white;
+    color: yellow;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
