added class to answer span and edited the ccs section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,12 @@ li{
     max-width:150px;
     margin: auto;
   }
-  span{
+  .main-answer{
     position:relative;
     top:-16px;
+    left: 15px;
   } 
+
+  .theanswer{
+    margin:10px;
+  }
